<resources>
    <string name="app_name">OTC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Login UI -->
    <string name="login_lbl">Login</string>
    <string name="username_lbl">Username</string>
    <string name="password_lbl">Password</string>
    <string name="fill_username_lbl">Please fill username</string>
    <string name="fill_password_lbl">Please fill password</string>


    <!-- Application List Labels -->
    <string name="processing_lbl">Processing..</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="load_success_msg">Loading data success</string>
    <string name="load_failed_msg">Loading data failed</string>
    <string name="app_id_lbl">"Application ID : "</string>
    <string name="app_date_lbl">Application Date : </string>
    <string name="app_type_lbl">"Application Type : "</string>
    <string name="open_app_details_lbl">Application Details</string>
    <string name="app_status_lbl">Application Status</string>
    <string name="estimation_form_lbl">Estimation Form</string>
    <string name="general_category_lbl">General Category</string>
    <string name="subitems_category_lbl">SubItems Category</string>
    <string name="materials_lbl">Materials</string>
    <string name="material_name_lbl">Material Name</string>
    <string name="material_amount_lbl">Material Amount</string>
    <string name="submit_form_lbl">Submit</string>
    <string name="empty_lbl">Empty</string>
    <string name="add_lbl">Add</string>
    <string name="group_lbl">"Group : "</string>
    <string name="employeeName_lbl">Employee Name : </string>
    <string name="refresh_lbl">Refresh</string>
    <string name="applications_list_lbl">Applications List</string>


    <!-- Search Srvice Acticicty -->
    <string name="search_service_lbl">Search Service</string>
    <string name="filterBy_lbl">"Filter By : "</string>
    <string name="filterByName_lbl">By Name:</string>
    <string name="filterByServiceId_lbl">By Service Id: </string>
    <string name="branch_lbl">"Branch: "</string>
    <string name="sub_branch_lbl">Area</string>
    <string name="consumer_name_lbl">"Name: "</string>
    <string name="consumer_id_lbl">ID</string>
    <string name="search_lbl">Search</string>
    <string name="fill_lbl">Fill</string>
    <string name="fill_notes_lbl">Fill Notes</string>
    <string name="service_id_wrong_msg">Service Id is wrong</string>
    <string name="service_id_lbl">Service Id</string>
    <string name="actions_lbl">Actions</string>
    <string name="location_id_lbl">Location Id</string>
    <string name="address_lbl">"Address : "</string>
    <string name="apartment_no_lbl">Apartment No</string>
    <string name="phone_lbl">"Phone : "</string>
    <string name="appDate">"Date : "</string>
    <string name="logout">Logout</string>
    <string name="postal_code_lbl">Postal Code</string>
    <string name="mobile_lbl">Mobile</string>
    <string name="email_lbl">Email</string>
    <string name="street_no_lbl">Street Name.</string>
    <string name="nearest_service_lbl">Nearest Service</string>
    <string name="balance_lbl">Balance</string>
    <string name="total_payment_lbl">Total Payment</string>
    <string name="total_payment_greater_than_balance_msg">Total Payment Greater than balance</string>

    <!-- Dialog strings -->
    <string name="close_form_confirmation_msg">Are you sure to close this form?</string>
    <string name="yes_lbl">Yes</string>
    <string name="no_lbl">No</string>

    <!-- Sidebar labels-->
    <string name="orders_list_lbl">Orders List</string>
    <string name="done_list">Done List</string>

    <!-- Application Details -->
    <string name="application_details_lbl">Application Details</string>


    <!-- GPS Tracking -->
    <string name="gps_dialog_title">GPS is settings</string>
    <string name="not_enable_gps_dialog_msg">GPS is not enabled. Do you want to go to settings menu?</string>


    <!-- Server strings -->
    <string name="load_data_success_msg">Loading data success</string>
    <string name="title_activity_submit_application">Submit Application</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_templates_list">Templates List</string>
    <string name="title_activity_items_list">Items List</string>
    <string name="priceList_lbl">Price List :</string>
    <string name="projectType_lbl">Project Type :</string>
    <string name="warehouses_lbl">Warehouse :</string>
    <string name="add_new_lbl">Add</string>
    <string name="add_template_lbl">Add Template</string>
    <string name="active_lbl">Active</string>
    <string name="number_of_templates_lbl">Number of templates</string>
    <string name="template_list_lbl">Template List</string>
    <string name="update_data_lbl">Update Data</string>
    <string name="login_success">Login Success</string>
    <string name="login_falied">Login Failed</string>
    <string name="no_data_found">NO data found. Please update the data</string>
    <string name="no_data_found_lbl">No data found</string>
    <string name="please_wait">Please Wait</string>
    <string name="update_lbl">UPDATE</string>
    <string name="provide_data">PLEASE PROVIDE SOME DATA TO SUBMIT</string>
    <string name="choose_item_lbl">Please choose Items</string>
    <string name="add_item">Add Item</string>
    <string name="exit">Exit</string>
    <string name="material_already_exist">the material already exist</string>
    <string name="template_already_exist">THE TEMPLATE IS ALREADY EXIST !!</string>
    <string name="title_activity_done_list">Done List</string>
    <string name="title_activity_order_list">Order List</string>
    <string name="title_activity_open_done_applications">Open Done Applications</string>
    <string name="open_done_application_details">APPLICATION DETAILS</string>
    <string name="logout_to_exit">LOGOUT TO EXIT</string>
    <string name="ok_lbl">OK</string>
    <string name="reset_lbl">Reset The Application</string>
    <string name="enclouser_lbl">Add Enclouser</string>
    <string name="app_id_filter_lbl">Application ID</string>
    <string name="estimated_items">Estimated Items</string>
    <string name="estimated_templates">Estimated Templates</string>
    <string name="phase1">"1 PHASE : "</string>
    <string name="phase3">"3 PHASE : "</string>
    <string name="enclouser">Enclouser</string>
    <string name="submit_success">Submit Success</string>
    <string name="submit_failed">Submit Failed</string>
    <string name="status">Status</string>
    <string name="service_class">Service Class</string>
    <string name="meter_no">Meter No.</string>
    <string name="meter_type">Meter Type</string>
    <string name="install_date">Install Date</string>
    <string name="last_read">Last Read</string>
    <string name="last_read_date">Last Read Date</string>
    <string name="notes">Notes</string>
    <string name="service_status">Service Status</string>
    <string name="costumer_name">Costumer\'s name</string>
    <string name="old_costumer_name">Old Costumer\'s name</string>
    <string name="safety_switch">Safety Switch</string>
    <string name="current_read">Current read</string>
    <string name="confirmation">Are you sure?</string>
    <string name="logout_success">Logout Success</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="quantity">Quantity :</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="images">Images</string>
    <string name="update_data_confirm">Are you sure, the process may take a long time?</string>
    <string name="edit_image_confirm">Are you sure you want to edit the image?</string>
    <string name="delete_image_confirm">Are you sure you want to delete the image?</string>
    <string name="approve_data_confirm">Are you sure you want to approve the data?</string>
    <string name="add_image">Add Image</string>
    <string name="add_note">Add Note</string>
    <string name="no_problem">No Problem</string>
    <string name="procedure">Procedure</string>
    <string name="closed">Closed</string>
    <string name="follow_up_inspection">Follow Up Inspection</string>
    <string name="submit_image_failed">Submit Image Failed !!</string>
    <string name="fill_out_notes">Please fill in the notes!</string>
    <string name="fill_field">Please fill in the field !</string>
    <string name="fill_current_reading">Please fill in the current reading !</string>
    <string name="success_lbl">Success</string>
    <string name="failed">Failed</string>
    <string name="check_internet_saved_data">Please check your internet connection, knowing that all data is saved !</string>
    <string name="warning">Warning</string>
    <string name="number_of_items">Number of items: </string>
    <string name="area">Area</string>
    <string name="sub_branch">Sub Branch</string>
    <string name="no_of_services">NO. Of Services</string>
    <string name="no_of_phase">NO. Of Phase</string>
    <string name="property_type">Property type</string>
    <string name="usage_type">Usage Type</string>
    <string name="binding_strength">Binding strength</string>
    <string name="templates_1_phase">Templates 1 phase</string>
    <string name="templates_3_phase">Templates 3 phase</string>
    <string name="suggested_templates">Suggested Templates</string>
    <string name="all_templates">All Templates</string>
    <string name="upload_image">Upload Imgaes</string>
    <string name="upload_image_lbl">The image has already been uploadedً</string>
    <string name="title_activity_service_info">serviceInfo</string>

</resources>