<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/search_lbl" />

    <TextView
        android:id="@+id/TV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext2"
        android:text="@string/number_of_templates_lbl" />

    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV1"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/template_item_more"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_add_24" />


        <EditText
            android:id="@+id/template_amount"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:text="1"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/template_item_less"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_remove_24" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_below="@+id/LL1"

        android:background="@android:color/darker_gray"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5sp"
        android:weightSum="2">

        <Button
            android:id="@+id/itemListSubmitBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/submit_form_lbl" />

        <Button
            android:id="@+id/itemListCancelBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/cancel_lbl" />

    </LinearLayout>

</RelativeLayout>