<?xml version="1.0" encoding="UTF-8"?>

    <androidx.cardview.widget.CardView app:cardUseCompatPadding="true" app:cardPreventCornerOverlap="true" app:cardMaxElevation="3dp" app:cardElevation="1dp" app:cardCornerRadius="8dp" app:cardBackgroundColor="@color/white" android:focusable="true" android:clickable="true" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/card_view_item" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="15dp" android:background="@drawable/tickets_item">


    <LinearLayout android:id="@+id/layout1" android:weightSum="8" style="@style/hor_linearlayout">


    <LinearLayout android:layout_height="wrap_content" android:layout_width="0dip" style="@style/hor_linearlayout" android:layout_weight="5">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/mediumLabel" android:text="@string/app_id_lbl"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/appID" style="@style/dataLabel"/>

</LinearLayout>

    <!--<TextViewstyle="@style/mediumLabel"android:layout_weight="2"android:text="@string/app_id_lbl"/><TextViewandroid:id="@+id/appID"style="@style/dataLabel"android:layout_height="wrap_content"android:layout_weight="2"/>-->



    <LinearLayout android:layout_height="wrap_content" android:layout_width="0dip" style="@style/hor_linearlayout" android:layout_weight="3">

    <!--<LinearLayoutstyle="@style/hor_linearlayout"android:layout_width="0dip"android:layout_height="wrap_content"android:layout_weight="4"> -->


    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/mediumLabel" android:text="@string/status"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/status" style="@style/dataLabel"/>

</LinearLayout>

    <CheckBox android:layout_height="match_parent" android:layout_width="wrap_content" android:id="@+id/syncCB" android:text="مرحل" android:enabled="false"/>

</LinearLayout>


    -<LinearLayout android:id="@+id/layoutDate" android:weightSum="3" style="@style/hor_linearlayout" android:layout_below="@+id/layout1">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/mediumLabel" android:text="تاريخ:"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/DateNoTV" style="@style/dataLabel" android:maxLines="3"/>

    <!-- <CheckBox-->


    <!-- android:id="@+id/noteCB"-->


    <!-- android:layout_width="wrap_content"-->


    <!-- android:layout_height="match_parent"-->


    <!--android:enabled="false"-->


    <!-- />-->


</LinearLayout>


    -<LinearLayout android:id="@+id/layout2" android:weightSum="3" style="@style/hor_linearlayout" android:layout_below="@+id/layoutDate">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/serviceNoLabel" style="@style/mediumLabel" android:text="@string/service_id_lbl"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/serviceNo" style="@style/dataLabel" android:maxLines="3"/>

    <!-- <CheckBox-->


    <!-- android:id="@+id/noteCB"-->


    <!-- android:layout_width="wrap_content"-->


    <!-- android:layout_height="match_parent"-->


    <!--android:enabled="false"-->


    <!-- />-->


</LinearLayout>


    -<LinearLayout android:id="@+id/layoutService_no" android:weightSum="3" style="@style/hor_linearlayout" android:layout_below="@+id/layout2">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/mediumLabel" android:text="@string/consumer_name_lbl"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/customerNameTB" style="@style/dataLabel" android:maxLines="3"/>

    <!-- <CheckBox-->


    <!-- android:id="@+id/noteCB"-->


    <!-- android:layout_width="wrap_content"-->


    <!-- android:layout_height="match_parent"-->


    <!--android:enabled="false"-->


    <!-- />-->


</LinearLayout>


    -<LinearLayout android:id="@+id/layout3" android:weightSum="8" style="@style/hor_linearlayout" android:layout_below="@+id/layoutService_no">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/mediumLabel" android:text="@string/address_lbl"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/address" style="@style/dataLabel" android:maxLines="3"/>

</LinearLayout>


    -<LinearLayout android:layout_height="wrap_content" android:id="@+id/layout4" android:weightSum="4" style="@style/hor_linearlayout" android:layout_below="@+id/layout3">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/mediumLabel" android:text="@string/app_type_lbl"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/appType" style="@style/dataLabel"/>

</LinearLayout>

        <LinearLayout
            android:id="@+id/layout5"
            style="@style/hor_linearlayout"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout4"
            android:weightSum="6">

            <TextView
                style="@style/mediumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_lbl" />

            <TextView
                android:id="@+id/itemPhone"
                style="@style/dataLabel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2" />

            <View
                android:layout_width="0dip"
                android:layout_height="0px"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/doneDateLabelTV"
                style="@style/mediumLabel"
                android:layout_width="wrap_content"
                android:text="تاريخ الأعتماد : "
                android:visibility="invisible" />

            <TextView
                android:id="@+id/doneDateTV"
                style="@style/mediumLabel"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:visibility="invisible" />

        </LinearLayout>

    <!-- <LinearLayout android:id="@+id/layout6"-->


    <!-- android:layout_below="@+id/layout5"-->


    <!-- style="@style/hor_linearlayout"-->


    <!-- ><View-->


    <!-- android:id="@+id/divider6"-->


    <!-- android:layout_width="match_parent"-->


    <!-- android:layout_height="1dp"-->


    <!-- android:background="#d5a919"-->


    <!-- /></LinearLayout>-->


</RelativeLayout>

</androidx.cardview.widget.CardView>