<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tool"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="8">

                        <TextView
                            android:id="@+id/empName_lbl"
                            style="@style/largeLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/employeeName_lbl" />

                        <TextView
                            android:id="@+id/empName"
                            style="@style/dataLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                    </LinearLayout>

                    <!-- <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
                         android:orientation="horizontal"
                         android:weightSum="8">

                         <TextView
                             android:id="@+id/empGroup_lbl"
                             style="@style/largeLabel"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="3"
                             android:text="@string/group_lbl" />

                         <TextView
                             android:id="@+id/empGroup"
                             style="@style/dataLabel"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="5"
                             android:text="" />

                     </LinearLayout>-->


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout1"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            style="@style/mediumLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/filterBy_lbl" />


                        <RadioGroup
                            android:id="@+id/choicGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:orientation="horizontal"
                            android:textSize="12sp">

                            <RadioButton
                                android:id="@+id/bySub_branch"
                                style="@style/dataLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:checked="true"
                                android:foregroundGravity="center"
                                android:gravity="center"
                                android:text="@string/area" />


                            <RadioButton
                                android:id="@+id/byAppID"
                                style="@style/dataLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:foregroundGravity="center"
                                android:gravity="center"
                                android:text="@string/app_id_filter_lbl" />

                            <RadioButton
                                android:id="@+id/byName"
                                style="@style/dataLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:foregroundGravity="center"
                                android:gravity="center"
                                android:text="@string/filterByName_lbl" />


                        </RadioGroup>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="11">

                        <EditText
                            android:id="@+id/appid"
                            android:layout_width="7dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:ems="8"
                            android:inputType="textShortMessage|text"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/searchBtn"
                            android:layout_width="49dp"
                            android:layout_height="40dp"
                            android:layout_margin="2sp"
                            android:layout_weight="3"
                            android:text="@string/search_lbl"
                            android:textSize="15sp" />
                            android:orientation="horizontal"
                            android:weightSum="11">

                          



                        <Button
                            android:id="@+id/refreshList"
                            android:layout_width="31dp"
                            android:layout_height="40dp"
                            android:layout_margin="2sp"
                            android:layout_weight="3"

                            android:text="@string/refresh_lbl"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <!-- <TextView
                             android:id="@+id/open_tickets_count"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/purple_200"
                             android:padding="2dp"
                             android:textSize="16sp"
                             android:textStyle="bold" />-->
                        <TextView
                            android:id="@+id/open_tickets_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/purple_200"
                            style="@style/dataLabel"
                            android:gravity="center" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/card_view"
            android:orientation="vertical"
            android:paddingLeft="3sp"
            android:paddingTop="3sp"
            android:paddingRight="3sp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">


<!--            &lt;!&ndash;change by ammar add refresh layout&ndash;&gt;-->
<!--            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--                android:id="@+id/swipeRefreshLayout"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent">-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

<!--            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->


        </LinearLayout>


    </LinearLayout>


</LinearLayout>